@@ -560,7 +560,7 @@ global locale" (emphasis Paolo), that is:
   <biblioentry>
       <title>
 	<link xmlns:xlink="http://www.w3.org/1999/xlink"
-	      xlink:href="http://pubs.opengroup.org/onlinepubs/9699919799/">
+	      xlink:href="https://pubs.opengroup.org/onlinepubs/9699919799/">
       System Interface Definitions, Issue 7 (IEEE Std. 1003.1-2008)
 	</link>
       </title>
